fixed the subtitles not showing on IE

--- a/src/less/skins/afterglow-default.less
+++ b/src/less/skins/afterglow-default.less
@@ -1509,9 +1509,9 @@ and the native poster can take over */
 	pointer-events: none;
 }
 
-.video-js.vjs-IE .vjs-text-track-display{
-	display:none;
-}
+// .video-js.vjs-IE .vjs-text-track-display{
+// 	display:none;
+// }
 
 /* Captions Settings Dialog */
 .vjs-caption-settings {
